--- a/sub_modules/code2seq/CSharpExtractor/CSharpExtractor/.nuget/packages.config
+++ b/sub_modules/code2seq/CSharpExtractor/CSharpExtractor/.nuget/packages.config
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="NUnit.ConsoleRunner" version="3.6.0" />
   <package id="NUnit.Extension.NUnitProjectLoader" version="3.5.0" />
