--- a/code_transformer/experiments/preprocessing/preprocess-1-code2seq.yaml
+++ b/code_transformer/experiments/preprocessing/preprocess-1-code2seq.yaml
@@ -2,13 +2,13 @@ experiment_setup:
   executable: 'code_transformer/experiments/preprocessing/preprocess-1.py'
 
 execution:
-  num_processes: 2
+  num_processes: 15
   batch_size: 10
-  save_every: 100  # Processed data will be saved into zipped chunks of this size for easier handling
+  save_every: 10000  # Processed data will be saved into zipped chunks of this size for easier handling
   random_seed: 123
 
 preprocessing:
-  use_tokens_limiter: True  # Whether input snippets should be discarded if they are too long, i.e., have too many tokens
+  use_tokens_limiter: False  # Whether input snippets should be discarded if they are too long, i.e., have too many tokens
   hard_num_tokens_limit: 10000  # hard tokens limit. Snippets with more tokens have to be dropped as generating an AST
                                 # would not be feasible for such long snippets
   allow_empty_methods: True  # Sometimes, methods have no body
